# poetry-generation-ua

./: .dockerignore  .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  README.ua.md  SYSTEM_OVERVIEW.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
corpus/: uk_auto_metric_corpus.json  uk_metric-rhyme_reference_corpus.json  uk_poetry_corpus.json  ukrainian_poetry_dataset.json
data/василь-симоненко/: василь-симоненко-20.txt
data/володимир-сосюра/: володимир-сосюра-28.txt
data/леся-українка/: леся-українка-32.txt
data/олег-ольжич/: олег-ольжич-30.txt
data/олена-теліга/: олена-теліга-22.txt
data/тарас-шевченко/: тарас-шевченко-21.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: README.md  detection_algorithm.md  detection_algorithm_en.md
docs/adr/: 001-hexagonal-architecture.md  002-llm-decorator-stack.md  003-contract-tests.md  004-pipeline-state-mutability.md
docs/en/: ablation_batch_and_report.md  ablation_explained.md  corpora.md  detection_algorithm.md  evaluation_harness.md  feedback_loop.md  llm_decorator_stack.md  meter_validation.md  prompt_construction.md  reliability_and_config.md  rhyme_validation.md  sanitization_pipeline.md  semantic_retrieval.md  stress_and_syllables.md  system_overview.md  system_overview_for_readers.md  thresholds_reference.md  user_guide.md
docs/ua/: ablation_batch_and_report.md  ablation_explained.md  corpora.md  detection_algorithm.md  evaluation_harness.md  feedback_loop.md  llm_decorator_stack.md  meter_validation.md  prompt_construction.md  reliability_and_config.md  rhyme_validation.md  sanitization_pipeline.md  semantic_retrieval.md  stress_and_syllables.md  system_overview.md  system_overview_for_readers.md  thresholds_reference.md  user_guide.md
results/: eval_20260428_003055.json  eval_20260428_003055.md  evaluate_love.json  evaluate_patriotic.json  evaluate_spring.json  evaluate_spring_all_configs.json
results/batch_20260426_220040/: aggregates.en.md  aggregates.ua.md  contributions.csv  contributions_by_cat.csv  report.json  runs.csv
scripts/: aggregate_runs.py  analyze_contributions.py  build_corpus_embeddings.py  build_corpus_from_data_dir.py  build_metric_corpus.py  preload_stanza.py  run_batch_evaluation.py  run_evaluation.py  run_pipeline.py
src/: composition_root.py  config.py
src/domain/: __init__.py  detection.py  errors.py  evaluation.py  feedback.py  metric_corpus_entry.py  pipeline_context.py  scenarios.py  value_objects.py  values.py
src/domain/models/: __init__.py  aggregates.py  commands.py  corpus_entry.py  entities.py  feedback.py  results.py  specifications.py
src/domain/ports/: __init__.py  clock.py  corpus.py  data.py  detection.py  evaluation.py  http.py  llm_trace.py  logging.py  metrics.py  pipeline.py  prompts.py  prosody.py  reporting.py  retrieval.py  rhyme.py  runner.py  sanitization.py  stress.py  text.py  tracing.py  validation.py
src/evaluation/: metrics.py  runner.py  scenarios.py  trace.py
src/generation/: llm.py
src/handlers/api/: app.py  dependencies.py  schemas.py
src/handlers/cli/: main.py
src/handlers/shared/: __init__.py  ablation_report.py  detect_orchestrator.py  line_displays.py
src/handlers/web/: router.py  validation_handler.py
src/infrastructure/clock/: __init__.py  system_clock.py
src/infrastructure/composition/: __init__.py  cache_keys.py  detection.py  evaluation.py  generation.py  generation_data_plane.py  generation_llm_stack.py  generation_pipeline_stages.py  metrics.py  metrics_calculator_registry.py  metrics_reporting.py  primitives.py  validation.py
src/infrastructure/corpus/: __init__.py  poem_file_parser.py
src/infrastructure/detection/: __init__.py  brute_force_meter_detector.py  brute_force_rhyme_detector.py  stanza_sampler.py
src/infrastructure/embeddings/: __init__.py  composite.py  labse.py
src/infrastructure/evaluation/: __init__.py  aggregator.py  scenario_data.py  scenario_registry.py
src/infrastructure/feedback/: __init__.py  ukrainian_formatter.py
src/infrastructure/http/: __init__.py  error_mapper.py
src/infrastructure/llm/: __init__.py  base.py  factory.py  gemini.py  mock.py  provider_info.py
src/infrastructure/logging/: __init__.py  stdout_logger.py
src/infrastructure/meter/: __init__.py  meter_canonicalizer.py  syllable_flag_strategy.py  ukrainian_meter_templates.py  ukrainian_weak_stress_lexicon.py
src/infrastructure/metrics/: __init__.py  iteration_metrics.py  line_count.py  meter_accuracy.py  regeneration_success.py  registry.py  rhyme_accuracy.py  semantic_relevance.py  token_usage.py
src/infrastructure/phonetics/: __init__.py  (+1 more)
src/meter/: stress.py  validator.py
src/pipeline/: baseline.py  full_system.py
src/retrieval/: corpus.py  metric_examples.py  retriever.py
src/rhyme/: transcribe.py  validator.py
src/runners/: __init__.py  batch_evaluation_runner.py  build_corpus_runner.py  build_embeddings_runner.py  build_metric_corpus_runner.py  detect_runner.py  evaluation_runner.py  generate_runner.py  preload_resources_runner.py  validate_runner.py
src/services/: __init__.py  batch_evaluation_service.py  detection_service.py  evaluation_service.py  poetry_service.py
src/shared/: __init__.py  string_distance.py  text_utils_ua.py
src/utils/: distance.py  text.py
tests/: conftest.py
tests/component/: test_labse_real.py
tests/contracts/: __init__.py  embedder_contract.py  llm_provider_contract.py  meter_detector_contract.py  meter_validator_contract.py  metric_calculator_contract.py  poem_validator_contract.py  rhyme_detector_contract.py  rhyme_validator_contract.py  stanza_sampler_contract.py
tests/fixtures/: domain.py  infrastructure.py  services.py  validators.py
tests/integration/: test_evaluation_runner.py  test_pipeline.py
tests/unit/: test_composition_root.py  test_config.py  test_evaluation.py  test_generation.py  test_meter_stress.py  test_meter_validator.py  test_metric_examples.py  test_retrieval.py  test_rhyme_transcribe.py  test_rhyme_validator.py  test_utils_distance.py  test_utils_text.py
(+195 files in other folders)
