[tool.poetry]
name = "poetry-generation-ua"
version = "0.1.0"
description = "Poetry generation project"
authors = ["Olha <olhadziuhal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
pandas = "*"
torch = "*"
transformers = "*"
sentence-transformers = "*"
ukrainian-word-stress = "*"
google-genai = "*"
scikit-learn = "*"
tqdm = "*"
pymorphy3 = "*"
stanza = "*"
matplotlib = "*"
seaborn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
ruff = "^0.6"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: integration tests (full pipeline)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E402",  # module level import not at top of file (common in scripts with sys.path.insert)
]
